selection of date and reponsive calendar

--- a/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Contact.html
+++ b/Les-Logements-Cosy-bootstrap-Mérouze-Aurélien/Contact.html
@@ -308,19 +308,19 @@
                 <div class="col-3">
                     <div class="mb-3">
                         <label for="startDate">Date d'arrivé souhaité :</label>
-                        <input type="text" class="form-control dateIn" id="startDate" name="startDate" readonly>
+                        <input type="text" class="form-control dateIn" id="startDate" name="startDate">
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="mb-3">
                         <label for="endDate">Date de départ souhaité :</label>
-                        <input type="text" class="form-control dateOut" id="endDate" name="endDate" readonly>
+                        <input type="text" class="form-control dateOut" id="endDate" name="endDate">
                     </div>
                 </div>
                 <div class="col-3">
                     <div class="mb-3">
                         <label for="numberDate">Nombre de nuits :</label>
-                        <input type="text" class="form-control numberNight" id="numberNight" name="numberNight" readonly>
+                        <input type="text" class="form-control numberNight" id="numberNight" name="numberNight">
                     </div>
                 </div>
             </div>
@@ -335,7 +335,7 @@
                 <div class="col-6">
                     <div class="mb-3">
                         <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                        <input type="text" class="form-control">
+                        <input type="text" class="form-control phone">
                     </div>
                 </div>
             </div>
