--- a/NosPrestations.html
+++ b/NosPrestations.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Nos logements</title>
+    <title>Nos prestations</title>
 </head>
 
 <body>
@@ -14,7 +14,7 @@
 
         <!-- ********************** Navbar with burger menu ********************** -->
 
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
+        <nav id="navbar" class="shadow-box navbar navbar-expand-lg navbar-light fw-bold">
             <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,108 +52,96 @@
     </header>
     <main>
 
-        <!-- *********************    Section présentation logements ******************* -->
 
-        <h1 class="text-center">Nos Promotions</h1>
+
+        <h1 class="text-center shadow-box"><p class="slide-right">Nos Prestations</p></h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
-
+        <!-- *********************    Que proposons nous ? ******************* -->
         <div class="container p-md-5">
-            <h3 id="logements" class="mt-5">Venez découvrir nos logements</h3>
-            <br>
-            <br>
-            <div class="row text-center">
-                <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html"> <br>Cosy Patio<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Patio-compréssée/chambre-patio.jpg"
-                            alt="Espace chambre Cosy Patio"></a>
-                    <p class="mb-5">Studio 2 personnes maximum, tout équipé,
-                        terrasse privative.
+            <div class="row">
+                <div class="col-lg-4 text-center">
+                    <h3 class="mt-5 mb-5">Que proposons nous ?</h3>
+                    <p>Nous avons sélectionné avec soin une gamme de logement située à Caen la Mer. Ces biens
+                        correspondent à un esprit cosy, cocooning et facile à vivre, ils vous permettront de pouvoir
+                        profiter pleinement de votre séjour, qu'il soit pour une courte durée ou des vacances
+                        prolongées.
                         <br>
-                        A partir de 49 euros.
+                        <br>
+                        Nos tarifs sont particulièrement abordables pour des biens de cette qualité. Ils permettront au
+                        plus grand nombre de pouvoir goûter à un repos bien mérité dans un espace apaisé .
+                        <br>
+                        <br>
+                        Alors à vos valises ! Et bon séjour dans la ville de Guillaume le conquérant.
                     </p>
                 </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="CaenZénith.html"> <br>Cosy Zénith<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-CosyZénith-compréssée/Salon.jpg"
-                            alt="Espace repas Caen Patio"></a>
-                    <p class="mb-5">Appartement 4 personnes maximum, tout équipé, 1 chambre, 1 couchage d'appoint.
-                        <br>
-                        A partir de 59 euros.
-                    </p>
-                </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'House.html"> <br>Zénit'House<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Zénit'House-compréssée/salle-zénithouse.jpg"
-                            alt="Pièce à vivre" Zénit'House></a>
-                    <p class="mb-5">Maison 4 personnes maximum, 2 chambres, toute équipée.
-                        <br>
-                        A partir de 69 euros.
-                    </p>
-                </div>
+                <div class="col-lg-8"><img class="shadow-box img-fluid mb-5" src="Img-Patio-compréssée/chambre-patio.jpg"
+                        alt="Chambre Caen Patio"></div>
             </div>
+
             <hr>
+
         </div>
-        <!-- ***********************Promotions******************************* -->
-
-
-        <div class="container">
-            <div class="row text-center">
-                <h4 class="mt-5 mb-5">Meilleurs prix garantis</h4>
-                <div class="col-12">
-                    <p>
-                    En réservant directement auprès de nous, vous bénéficiez du meilleur tarif en économisant 10% par
-                    rapport aux plateformes de réservation classique. <br>
-                    Les prix sont évolutifs en fonction de la période de l'année.
-                    </p>
-                </div>
-                <div class="row mb-5">
-                    <h4 class=" mb-5 mt-5 text-center">Et plus encore...</h4>
-                    <div class="offset-lg-1 col-lg-3">10 % de réduction supplémentaire pour une réservation de 7 nuits minimum.
-                    </div>
-                    <div class="offset-lg-1 col-lg-3">20 % de réduction supplémentaire pour une réservation de 14 nuits minimum.
-                    </div>
-                    <div class="offset-lg-1 col-lg-3">30 % de réduction supplémentaire pour une réservation de 21 nuits minimum.
-                    </div>
-                </div>
-            </div>
-            <hr>
-        </div>
-
         <!-- ****************** Formulaire ******************** -->
         <form class="form">
             <div class="container">
-                <h4 class="mb-5">Contactez nous</h4>
+                <h4 class="mb-5">Demande de réservation</h4>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-4 mb-5">
+                        <label for="start">Date d'arrivée :</label>
+
+                        <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" value="2023-09-22" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-4 mb-5">
+                        <label for="start">Date de départ :</label>
+
+                        <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" value="2023-09-22" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-lg-3 mb-3">
+                        <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                        <input type="text" class="border-dark form-control numberNight">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputName" class="form-label">Nom et Prénom</label>
-                            <input type="text" class="form-control name">
+                            <input type="text" class="border-dark form-control name">
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input type="email" class="form-control email" aria-describedby="emailHelp">
+                            <input type="email" class="border-dark form-control email" aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="phone border-dark form-control">
                         </div>
                     </div>
                 </div>
-                <div class="mb-3">
-                    <label for="commentaire">Ecrivez nous</label>
-                    <textarea class="form-control message" placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
+                <div class="row">
+                    <div class="col-12 mb-3">
+                        <label for="commentaire">Ecrivez nous</label>
+                        <textarea class="border-dark form-control message" placeholder="Laissez-nous votre message !"
+                            style="height: 100px"></textarea>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12">
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="check">
+                            <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label" for="check">Valider le formulaire</label>
                         </div>
                     </div>
@@ -186,13 +174,9 @@
                                 Vacances, Hébergements, Gites, Locations saisonnières.
                             </p>
                         </div>
-
-
-
-
                         <div class="col-md-6">
                             <h6 class="text-uppercase text-center fw-bold mb-4">
-                                <i class="fas fa-gem me-3 text-center"></i>Contact
+                                <i class="fas fa-gem me-3"></i>Contact
                             </h6>
                             <p class="text-center">
                                 +33688011150
@@ -208,7 +192,7 @@
             <!-- Copyright -->
             <div class="text-center p-4 b-footer">
                 © 2023 Copyright:
-                <a class="text-reset fw-bold" href="https://mdbootstrap.com/">y1y1</a>
+                <a class="text-reset fw-bold" href="aurelienmerouze@gmail.com">y1y1</a>
             </div>
             <!-- Copyright -->
         </footer>
@@ -216,13 +200,10 @@
 
 
     </main>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
     <script src="Js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="Js/script.js"></script>
 </body>
 
