--- a/CaenlaMer.html
+++ b/CaenlaMer.html
@@ -54,7 +54,7 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center">Caen la Mer</h1>
+        <h1 class="text-center"><p class="slide-right">Caen la Mer</p></h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
@@ -139,38 +139,61 @@
             <!-- ****************** Formulaire ******************** -->
             <form class="form">
                 <div class="container">
-                    <h4 class="mb-5">Contactez nous</h4>
+                    <h4 class="mb-5">Demande de réservation</h4>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-lg-4 mb-5">
+                            <label for="start">Date d'arrivée :</label>
+    
+                            <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" value="2023-09-22" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 mb-5">
+                            <label for="start">Date de départ :</label>
+    
+                            <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" value="2023-09-22" />
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6 col-lg-3 mb-3">
+                            <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                            <input type="text" class="border-dark form-control numberNight">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-6">
                             <div class="mb-3">
                                 <label for="inputName" class="form-label">Nom et Prénom</label>
-                                <input type="text" class="form-control name">
+                                <input type="text" class="border-dark form-control name">
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12 col-lg-6">
                             <div class="mb-3">
                                 <label for="inputEmail" class="form-label">Adresse email</label>
-                                <input type="email" class="form-control email" aria-describedby="emailHelp">
+                                <input type="email" class="border-dark form-control email" aria-describedby="emailHelp">
                                 <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                             </div>
                         </div>
-                        <div class="col-6">
+                        <div class="col-12 col-lg-6">
                             <div class="mb-3">
                                 <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                                <input type="text" class="form-control">
+                                <input type="text" class="phone border-dark form-control">
                             </div>
                         </div>
                     </div>
-                    <div class="mb-3">
-                        <label for="commentaire">Ecrivez nous</label>
-                        <textarea class="form-control message" placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
+                    <div class="row">
+                        <div class="col-12 mb-3">
+                            <label for="commentaire">Ecrivez nous</label>
+                            <textarea class="border-dark form-control message" placeholder="Laissez-nous votre message !"
+                                style="height: 100px"></textarea>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-12">
                             <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="check">
+                                <input type="checkbox" class="border-dark form-check-input" id="check">
                                 <label class="form-check-label" for="check">Valider le formulaire</label>
                             </div>
                         </div>
@@ -233,13 +256,13 @@
 
 
     </main>
+   
+
+
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
     <script src="Js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="Js/script.js"></script>
 </body>
 
