--- a/Contact.html
+++ b/Contact.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Nos prestations</title>
+    <title>Contactez nous</title>
 </head>
 
 <body>
+    <!-- *************** Navbar with Menu Burger ************************ -->
     <header>
-
-        <!-- ********************** Navbar with burger menu ********************** -->
 
         <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
             <a class="navbar-brand" href="index.html">Les Logements Cosy</a>
@@ -52,80 +51,90 @@
     </header>
     <main>
 
+        <!-- ******************* Titre *********************** -->
 
-
-        <h1 class="text-center">Nos Prestations</h1>
+        <h1 class="text-center"><p class="slide-right">Contactez nous</p></h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
-        <!-- *********************    Que proposons nous ? ******************* -->
-        <div class="container p-md-5">
+        <!-- *******************************************Calendrier**************************** -->
+
+
+        <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Calendrier et Formulaire</title>
+</head>
+<body>
+    <form class="form">
+        <div class="container">
+            <h4 class="mb-5">Demande de réservation</h4>
             <div class="row">
-                <div class="col-lg-4 text-center">
-                    <h3 class="mt-5 mb-5">Que proposons nous ?</h3>
-                    <p>Nous avons sélectionné avec soin une gamme de logement située à Caen la Mer. Ces biens
-                        correspondent à un esprit cosy, cocooning et facile à vivre, ils vous permettront de pouvoir
-                        profiter pleinement de votre séjour, qu'il soit pour une courte durée ou des vacances
-                        prolongées.
-                        <br>
-                        <br>
-                        Nos tarifs sont particulièrement abordables pour des biens de cette qualité. Ils permettront au
-                        plus grand nombre de pouvoir goûter à un repos bien mérité dans un espace apaisé .
-                        <br>
-                        <br>
-                        Alors à vos valises ! Et bon séjour dans la ville de Guillaume le conquérant.
-                    </p>
+                <div class="col-12 col-lg-4 mb-5">
+                    <label for="start">Date d'arrivée :</label>
+
+                    <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" value="2023-09-22" />
                 </div>
-                <div class="col-lg-8"><img class="img-fluid mb-5" src="Img-Patio-compréssée/chambre-patio.jpg"
-                        alt="Chambre Caen Patio"></div>
             </div>
+            <div class="row">
+                <div class="col-12 col-lg-4 mb-5">
+                    <label for="start">Date de départ :</label>
 
-            <hr>
-
-        </div>
-        <!-- ****************** Formulaire ******************** -->
-        <form class="form">
-            <div class="container">
-                <h4 class="mb-5">Contactez nous</h4>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="mb-3">
-                            <label for="inputName" class="form-label">Nom et Prénom</label>
-                            <input type="text" class="form-control name">
-                        </div>
+                    <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" value="2023-09-22" />
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-6 col-lg-3 mb-3">
+                    <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                    <input type="text" class="border-dark form-control numberNight">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="mb-3">
+                        <label for="inputName" class="form-label">Nom et Prénom</label>
+                        <input type="text" class="border-dark form-control name">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="mb-3">
-                            <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input type="email" class="form-control email" aria-describedby="emailHelp">
-                            <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="mb-3">
-                            <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                            <input type="text" class="form-control">
-                        </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-lg-6">
+                    <div class="mb-3">
+                        <label for="inputEmail" class="form-label">Adresse email</label>
+                        <input type="email" class="border-dark form-control email" aria-describedby="emailHelp">
+                        <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                     </div>
                 </div>
-                <div class="mb-3">
+                <div class="col-12 col-lg-6">
+                    <div class="mb-3">
+                        <label for="inputNumber" class="form-label">Numéro de téléphone</label>
+                        <input type="text" class="phone border-dark form-control">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 mb-3">
                     <label for="commentaire">Ecrivez nous</label>
-                    <textarea class="form-control message" placeholder="Laissez-nous votre message !" style="height: 100px"></textarea>
+                    <textarea class="border-dark form-control message" placeholder="Laissez-nous votre message !"
+                        style="height: 100px"></textarea>
                 </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="check">
-                            <label class="form-check-label" for="check">Valider le formulaire</label>
-                        </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="border-dark form-check-input" id="check">
+                        <label class="form-check-label" for="check">Valider le formulaire</label>
                     </div>
                 </div>
-                <button type="submit" class="btn mb-5">Envoyer</button>
             </div>
-        </form>
+            <button type="submit" class="btn mb-5">Envoyer</button>
+        </div>
+    </form>
+
+
         <!-- ********************* footer *************************** -->
 
         <footer class="text-center text-lg-start bg-cosy text-muted">
