--- a/CosyPatio.html
+++ b/CosyPatio.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/bootstrap.css">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Zénit'House</title>
+    <title>Cosy Patio</title>
 </head>
 
 <body>
@@ -54,10 +54,10 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center tittle">Zénit'House</h1>
+        <h1 class="text-center"><p class="slide-right">Cosy Patio</p></h1>
 
 
-        <h2 id="tittle" class="text-center mb-5 mt-5 tittle">Un lieu unique pour un séjour unique</h2>
+        <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
         <hr>
 
         <!-- ***************** Carousel **************** -->
@@ -67,7 +67,7 @@
                 <div class="row">
                     <div class="offset-lg-1 col-lg-10">
 
-                        <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="true">
+                        <div id="carouselExampleIndicators" class="carousel slide w-100 shadow-box" data-bs-ride="true">
                             <div class="carousel-indicators">
                                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
                                     class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -82,24 +82,24 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="Img-Zénit'House-compréssée/cuisine-zénithouse.jpg"
-                                        class="d-block w-100 landscape-image" alt="Cuisine Zénit'House">
+                                    <img src="Img-Patio-compréssée/chambre-patio.jpg"
+                                        class="d-block w-100 landscape-image" alt="Chambre Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" class="d-block w-100"
-                                        alt="Pièce à vivre Zénit'House">
+                                    <img src="Img-Patio-compréssée/salon-patio.jpg" class="d-block w-100"
+                                        alt="Salon Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Zénit'House-compréssée/salon-zénithouse.jpg" class="d-block w-100"
-                                        alt="Salon Zénit'House">
+                                    <img src="Img-Patio-compréssée/salon2-patio.jpg" class="d-block w-100"
+                                        alt="Salon Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Zénit'House-compréssée/chambre1-zénithouse.jpg" class="d-block w-100"
-                                        alt="Première chambre Zénit'House">
+                                    <img src="Img-Patio-compréssée/cuisine-patio.jpg" class="d-block w-100"
+                                        alt="Cuisine Cosy Patio">
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="Img-Zénit'House-compréssée/chambre2-zénithouse.jpg" class="d-block w-100"
-                                        alt="Seconde chambre Zénit'House">
+                                    <img src="Img-Patio-compréssée/Terasse retouchée, recadrée.jpg"
+                                        class="d-block w-100" alt="Terasse Cosy Patio">
                                 </div>
 
                             </div>
@@ -128,30 +128,20 @@
             <div class="row">
                 <h3 class="text-center mb-5">A propos de ce logement</h3>
                 <div class=" offset-1 col-10 ">
-                    <p class="text-center">
-                        Agréable maison Cosy aux portes de Caen.
+                    <p class="text-center">Cette suite affiche un style résolument unique.
                         <br>
-                        A moins de 5 minutes du ZENITH du Palais des sports et du parc expo de Caen, venez profiter
-                        d'une ambiance chaleureuse dans une maison cocooning située dans un petit village ayant su
-                        sauvegarder son calme et son authenticité.
+                        Venez découvrir ce superbe logement à deux pas de la gare de Caen parfaitement aménagé pour
+                        profiter de vos séjours dans la cité de Guillaume Le Conquérant.
                         <br>
                         <br>
-
-                        Maison fonctionnelle, facile à vivre, un grand salon et deux belles chambres, l'une avec un
-                        petit espace de travail et l'autre avec un espace dédié au rangement.
-                        Et une terrasse exposée sud, pour profiter des rayons du soleil et un terrain d'environ 270
-                        m2.
-                        <br>
-                        <br>
-
-                        L'ensemble de la maison et du terrain est dédié aux voyageurs.
-                    </p>
-
+                        Vous pourrez vous détendre en profitant de sa magnifique terrasse privative et gouter à un
+                        moment de relaxation bien mérité, le tout à proximité du port de plaisance, du centre ville et
+                        des rives de l'Orne.
                     </p>
 
                     <h4 class="mt-5">Préparer votre séjour</h4>
                     <br>
-                    <span class="fw-bold">Capacité d'accueil :</span>2 chambres, 4 personnes maximum.
+                    <span class="fw-bold">Capacité d'accueil :</span> 2 personnes maximum.
                     <br>
                     <span class="fw-bold">Arrivée :</span> A partir de 15 heures.
                     <br>
@@ -163,70 +153,91 @@
 
                     <p>Le linge de lit est fourni, ce qui n'est pas le cas pour les serviettes de toilette.
                         <br>
-                        Néanmoins si vous le souhaitez, des serviettes sont à disposition moyennant un supplément de 7
+                        Néanmoins si vous le souhaitez, des serviettes sont à disposition moyennant un supplément de 5
                         euros pour la durée du séjour.
                         <br>
                         Un des principes de la location courte durée est de procéder au nettoyage du bien à la fin du
                         séjour.
                         <br>
                         Si vous ne souhaitez pas réaliser cette tâche, nous vous proposons de réaliser le ménage
-                        moyennant un montant de 39 euros.
+                        moyennant un montant de 30 euros.
                     </p>
                 </div>
             </div>
         </div>
-
         <!--Google map-->
         <div class="container mt-lg-5 mb-lg-5">
             <h5 class="text-center mb-5">Situer le logement</h5>
             <div class="row offset-lg-2 col-lg-8">
-                <div id="map-container-google-1" class="z-depth-1-half map-container" style="height: 500px">
-
+                <div id="map-container-google-1" class="z-depth-1-half map-container shadow-box" style="height: 500px">
                     <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2609.980261560832!2d-0.426948123803341!3d49.14399918056523!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480a438d083b42c5%3A0xd79d645d6084ee0d!2sRue%20Binet%2C%2014930%20%C3%89terville!5e0!3m2!1sfr!2sfr!4v1693771432159!5m2!1sfr!2sfr"
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2608.278879364328!2d-0.33990792380149304!3d49.17629447828241!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480a683b5959ac3f%3A0xd8e7a4459da6205!2sRue%20du%20Marais%2C%20Caen!5e0!3m2!1sfr!2sfr!4v1693771525840!5m2!1sfr!2sfr"
                         width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </div>
             </div>
         </div>
-        
+
+
         <!-- ****************** Formulaire ******************** -->
         <form class="form">
             <div class="container">
-                <h4 class="mb-5">Contactez nous</h4>
+                <h4 class="mb-5">Demande de réservation</h4>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-4 mb-5">
+                        <label for="start">Date d'arrivée :</label>
+
+                        <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start" value="2023-09-22" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-4 mb-5">
+                        <label for="start">Date de départ :</label>
+
+                        <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start" value="2023-09-22" />
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-6 col-lg-3 mb-3">
+                        <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                        <input type="text" class="border-dark form-control numberNight">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputName" class="form-label">Nom et Prénom</label>
-                            <input type="text" class="form-control name">
+                            <input type="text" class="border-dark form-control name">
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input type="email" class="form-control email" aria-describedby="emailHelp">
+                            <input type="email" class="border-dark form-control email" aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="phone border-dark form-control">
                         </div>
                     </div>
                 </div>
-                <div class="mb-3">
-                    <label for="commentaire">Ecrivez nous</label>
-                    <textarea class="form-control message" placeholder="Laissez-nous votre message !"
-                        style="height: 100px"></textarea>
+                <div class="row">
+                    <div class="col-12 mb-3">
+                        <label for="commentaire">Ecrivez nous</label>
+                        <textarea class="border-dark form-control message" placeholder="Laissez-nous votre message !"
+                            style="height: 100px"></textarea>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12">
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="check">
+                            <input type="checkbox" class="border-dark form-check-input" id="check">
                             <label class="form-check-label" for="check">Valider le formulaire</label>
                         </div>
                     </div>
@@ -237,7 +248,7 @@
         <!-- ********************* footer *************************** -->
 
         <footer class="text-center text-lg-start bg-cosy text-muted">
-            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom ">
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
                 <div class="me-5 d-none d-lg-block">
                     <span class="fw-bold">N'hésitez pas à nous contacter avec les coordonées ci-dessous </span>
                 </div>
@@ -289,13 +300,10 @@
 
 
     </main>
+   
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
     <script src="Js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="Js/script.js"></script>
 </body>
 
