--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <!-- ********************** Navbar with burger menu ********************** -->
 
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-light fw-bold">
+        <nav id="navbar" class="shadow-box navbar navbar-expand-lg navbar-light fw-bold">
             <a class="navbar-brand" href="#">Les Logements Cosy</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,9 @@
 
         <!-- *********************    Titre  ******************* -->
 
-        <h1 class="text-center">Les Logements Cosy</h1>
+        <h1 class="text-center mt-5 shadow-box">
+            <p class="slide-right">Les Logements Cosy</p>
+        </h1>
 
 
         <h2 class="text-center mb-5 mt-5">Un lieu unique pour un séjour unique</h2>
@@ -65,21 +67,22 @@
             <br>
             <br>
             <div class="row text-center">
-                <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html"> <br>Cosy Patio<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Patio-compréssée/chambre-patio.jpg"
+                <div class="col-lg-4"><a class="text-reset fw-bold" href="CosyPatio.html">Cosy Patio<img
+                            class="logement mt-4 mb-5 img-fluid shadow-box" src="Img-Patio-compréssée/chambre-patio.jpg"
                             alt="Espace chambre Cosy Patio"></a>
                     <p class="mb-5">Venez découvrir cette suite à l'ambiance très Cosy, située idéalement à deux pas de
                         la gare de Caen et proche de toutes commodités !</p>
                 </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="CosyZénith.html"> <br>Cosy Zénith<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-CosyZénith-compréssée/Salon.jpg"
+                <div class="col-lg-4 "><a class="text-reset fw-bold" href="CosyZénith.html">Cosy Zénith<img
+                            class="logement mt-4 mb-5 img-fluid shadow-box" src="Img-CosyZénith-compréssée/Salon.jpg"
                             alt="Salon CosyCaen Zénith"></a>
                     <p class="mb-5">Idéalement situé à proximité du Zénith, du centre-ville et du stade d'Ornano, vous
                         découvrirez ce magnifique appartement Cosy orienté plein sud et sans aucun vis à vis !</p>
                 </div>
-                <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'house.html"> <br>Zénit'House<img
-                            class="logement mt-4 mb-5 img-fluid" src="Img-Zénit'House-compréssée/salle-zénithouse.jpg"
-                            alt="Pièce à vivre Zénit'House" Zénit'House></a>
+                <div class="col-lg-4 "><a class="text-reset fw-bold" href="Zénit'house.html"> Zénit'House<img
+                            class="logement mt-4 mb-5 img-fluid shadow-box"
+                            src="Img-Zénit'House-compréssée/salle-zénithouse.jpg" alt="Pièce à vivre Zénit'House"
+                            Zénit'House></a>
                     <p class="mb-5">A 5 minutes en voiture du Zénith et du parc expo, cette charmante maison Cosy est
                         parfaite pour profiter des évènements organisés aux alentours !</p>
                 </div>
@@ -92,11 +95,11 @@
 
         <div class="container mb-5">
             <div class="row">
-                <div class="col-lg-6 "><a href="NosPrestations.html"><img class="logement mt-5 mb-5 img-fluid "
+                <div class="col-lg-6 "><a href="NosPrestations.html"><img class="shadow-box mt-5 mb-5 img-fluid "
                             src="Img-CosyZénith-compréssée/Chambre.jpg" alt="Chambre Cosy Zénith"></a>
                 </div>
-                <div class="col-lg-6 text-center mt-5"><br>
-                    <h3 class="mb-5 mt-5"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>
+                <div class="col-lg-6 mt-5"><br>
+                    <h3 class="mb-5 mt-lg-5 text-center"><a class="text-reset fw-bold" href="">Nos Prestations</a></h3>
                     <p class="mt-5">Que proposons nous ? <br> Nous avons
                         sélectionné avec soin une gamme de logement située à Caen la Mer. Notre site de location
                         saisonnière
@@ -133,7 +136,7 @@
                                 Normande</a></li>
                     </ul>
                 </div>
-                <div class="col-lg-6"><a href="CaenlaMer.html"><img class="logement mt-5 mb-5 img-fluid "
+                <div class="col-lg-6"><a href="CaenlaMer.html"><img class="shadow-box mt-5 mb-5 img-fluid "
                             src="Img-CaenlaMer/Plage.jpg" alt="4 personnes arrivant à la
                                             plage"></a>
                 </div>
@@ -149,41 +152,67 @@
         <!-- ****************** Formulaire ******************** -->
 
         <form class="form">
-            <div class="container">
-                <h4 class="mb-5">Contactez nous</h4>
+            <div class="container col-10">
+                <h4 class="mb-5">Demande de réservation</h4>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-4 mb-5">
+                        <label for="start">Date d'arrivée :</label>
+
+                        <input class="rounded-2 border-1 dateIn" type="date" id="dateIn" name="trip-start"/>
+                    <div id="dateError" style="color: red;"></div>
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-4 mb-5">
+                        <label for="start">Date de départ :</label>
+
+                        <input class="rounded-2 border-1 dateOut" type="date" id="dateOut" name="trip-start"/>
+                        <div id="dateOutError" style="color: red;"></div>
+                    </div>
+                    
+                </div>
+                <div class="row">
+                    <div class="col-6 col-lg-3 mb-3">
+                        <label for="inputNumberNight" class="form-label">Nombre de nuits</label>
+                        <input type="text" class="border-dark form-control numberNight">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputName" class="form-label">Nom et Prénom</label>
-                            <input type="text" class="form-control name">
+                            <input type="text" class="border-dark form-control name">
                         </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputEmail" class="form-label">Adresse email</label>
-                            <input type="email" class="form-control email" aria-describedby="emailHelp">
+                            <input type="email" class="border-dark form-control email" aria-describedby="emailHelp">
                             <div id="emailHelp" class="form-text">Votre e-mail ne sera pas diffusé.</div>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-12 col-lg-6">
                         <div class="mb-3">
                             <label for="inputNumber" class="form-label">Numéro de téléphone</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="phone border-dark form-control">
                         </div>
                     </div>
                 </div>
-                <div class="mb-3">
-                    <label for="commentaire">Ecrivez nous</label>
-                    <textarea class="form-control message" placeholder="Laissez-nous votre message !"
-                        style="height: 100px"></textarea>
+                <div class="row">
+                    <div class="col-12 mb-3">
+                        <label for="commentaire">Ecrivez nous</label>
+                        <textarea class="border-dark form-control message" placeholder="Laissez-nous votre message !"
+                            style="height: 100px"></textarea>
+                    </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-12">
                         <div class="mb-3 form-check">
-                            <input type="checkbox" class="form-check-input" id="check">
-                            <label class="form-check-label" for="check">Valider le formulaire</label>
+                            <input type="checkbox" class="border-dark form-check-input" id="check">
+                            <label class="form-check-label figure-caption" for="check">J'accepte que mon adresse mail soit destinée à la société CosyCaen & Mer. Elle sera utilisée uniquement afin de vous envoyer des informations concernant nos services et notre actualité. Il vous est possible de suivre le lien dans l'email de confirmation d'envoie du formulaire afin de vous désabonner à tout moment. Pour en savoir plus, consulter notre <a href="">Politique de confidentialité</a>.</label>
                         </div>
                     </div>
                 </div>
@@ -244,18 +273,11 @@
             </div>
             <!-- Copyright -->
         </footer>
-        <!-- Footer -->
-
-
     </main>
+
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script> -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
-
     <script src="Js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="Js/script.js"></script>
 </body>
 
